# hexa-mesh-from-VTK_vtk9

./: .gitignore  CMakeLists.txt  LICENSE  README.md  converted_mesh.vtu
src/: config.cpp  config.h  ini.h  main.cpp
